* fixing list styles in nested header dropdowns * lower z-index for carousel indicators - They were sitting on top of mobile menu

--- a/src/sass/bootstrap/_carousel.scss
+++ b/src/sass/bootstrap/_carousel.scss
@@ -218,7 +218,7 @@
     position: absolute;
     bottom: -10px;
     left: 50%;
-    z-index: 15;
+    z-index: 9;
     width: 60%;
     margin-left: -30%;
     padding-left: 0;
